packages/block-library/src/navigation/style.scss
/* ... */
// Default menu background and font color.
.wp-block-navigation:not(.has-background)
.wp-block-navigation__responsive-container.is-menu-open {
	background-color: #fff;
}

.wp-block-navigation:not(.has-text-color)
.wp-block-navigation__responsive-container.is-menu-open {
	color: #000;
}


// Overlay menu toggle button label
.wp-block-navigation__toggle_button_label {
	font-size: 1rem;
	font-weight: bold;
}

// Menu and close buttons.
.wp-block-navigation__responsive-container-open,
.wp-block-navigation__responsive-container-close {
	vertical-align: middle;
	cursor: pointer;
	color: currentColor;
	background: transparent;
	border: none;
	margin: 0;
	padding: 0;
	text-transform: inherit;

	svg {
		fill: currentColor;
		pointer-events: none;
		display: block;
		width: $navigation-icon-size;
		height: $navigation-icon-size;
	}
}

// Button to open the menu.
.wp-block-navigation__responsive-container-open {
	display: flex;

	// When set to collapse into a text button, it should inherit the parent font.
	// This needs specificity to override inherited properties by the button element and component.
	&.wp-block-navigation__responsive-container-open.wp-block-navigation__responsive-container-open {
		font-family: inherit;
		font-weight: inherit;
		font-size: inherit;
	}

	&:not(.always-shown) {
		@include break-small {
			display: none;
		}
	}
}

// Button to close the menus.
.wp-block-navigation__responsive-container-close {
	position: absolute;
	top: 0;
	right: 0;
	z-index: 2; // Needs to be above the modal z index itself.

	// When set to collapse into a text button, it should inherit the parent font.
	// This needs specificity to override inherited properties by the button element and component.
	&.wp-block-navigation__responsive-container-close.wp-block-navigation__responsive-container-close {
		font-family: inherit;
		font-weight: inherit;
		font-size: inherit;
	}
}

// The menu adds wrapping containers.
.wp-block-navigation__responsive-close {
	width: 100%;

	.has-modal-open & {
		// Try to inherit wide-width when defined, so the X can align to a top-right aligned menu.
		max-width: var(--wp--style--global--wide-size, 100%);
		margin-left: auto;
		margin-right: auto;
	}

	// This element is not keyboard accessible, and is focusable only using the mouse.
	// It is part of the MicroModal library that adds a scrim outside of a modal dialog that is not fullscreen,
	// where clicking that scrim closes the overlay just like the close button.
	// It should not have a visible focus rectangle.
	&:focus {
		outline: none;
	}
}

.is-menu-open .wp-block-navigation__responsive-close,
.is-menu-open .wp-block-navigation__responsive-dialog,
.is-menu-open .wp-block-navigation__responsive-container-content {
	box-sizing: border-box;
}

.wp-block-navigation__responsive-dialog {
	position: relative;
}

// Adjust open dialog top margin when admin-bar is visible.
// Needs to be scoped to .is-menu-open, or it will shift the position of any other navigations that may be present.
.has-modal-open .admin-bar .is-menu-open .wp-block-navigation__responsive-dialog {
	margin-top: $admin-bar-height-big;

	// Handle smaller admin-bar.
	@include break-medium() {
		margin-top: $admin-bar-height;
	}
}

// Prevent scrolling of the parent content when the modal is open.
html.has-modal-open {
	overflow: hidden;
}

